测试activity任务栈

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,33 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity
+
+            android:name=".ryg.activity.AActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.wenjie.task1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ryg.activity.BActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.wenjie.task1">
+        </activity>
+        <activity
+            android:name=".ryg.activity.CActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.wenjie.task2">
+        </activity>
+        <activity
+            android:name=".ryg.activity.DActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.wenjie.task2">
         </activity>
     </application>
 
